--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,400&display=swap");
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
+:root {
+	--text-black: rgb(23, 23, 23);
+	--primary-color: #faf4e5;
+	--primary-pink: #e5a1aa;
+}
+html,
+body {
+	font-family: "Montserrat", sans-serif;
+	color: var(--text-black);
+}
+
+/* Webgl experience */
 .experience {
 	position: fixed;
 	width: 100vw;
@@ -13,4 +27,95 @@
 .experience-canvas {
 	width: 100%;
 	height: 100%;
+}
+
+/* Page styling */
+
+.page {
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.page-wrapper {
+	position: relative;
+}
+
+.hero {
+	width: 100vw;
+	height: 100vh;
+}
+
+.hero-wrapper {
+	position: relative;
+	width: calc(100% - 160px);
+	height: 100%;
+	margin: 0 auto;
+	max-width: 1100px;
+}
+
+.hero-main {
+	position: absolute;
+	bottom: 20%;
+}
+.hero-main-title {
+	font-size: 44px;
+}
+.hero-main-description {
+	font-size: 16px;
+}
+
+.hero-second {
+	position: absolute;
+	top: calc(50% - 150px);
+	right: 0;
+}
+
+.hero-second-subheading {
+	font-size: 24px;
+	text-transform: uppercase;
+}
+
+.section-margin {
+	height: 3000px;
+	width: 100%;
+}
+
+.section {
+	width: 50%;
+	padding: 1000px 4%;
+	margin: 0;
+	background-color: var(--primary-color);
+}
+
+.section-intro-wrapper {
+	position: relative;
+	padding: 20% 5%;
+	border-bottom: 2px solid var(--primary-pink);
+	padding-bottom: 400px;
+}
+
+.section-detail-wrapper {
+	position: relative;
+	padding: 20% 5%;
+}
+
+.section-heading {
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 1.8;
+	margin-top: 64px;
+}
+
+.section-text {
+	line-height: 2;
+	margin-top: 18px;
+	font-size: 16px;
+}
+.left {
+	margin-right: auto;
+}
+.right {
+	margin-left: auto;
 }
