--- a/style.css
+++ b/style.css
@@ -113,9 +113,57 @@ body {
 	margin-top: 18px;
 	font-size: 16px;
 }
+
+.section-title {
+	position: relative;
+	color: var(--primary-pink);
+}
+.section-title-text {
+	display: block;
+	font-size: 40px;
+	font-weight: 500;
+	transform-origin: left;
+	transform: skewY(25deg);
+	z-index: 5;
+	text-transform: uppercase;
+}
 .left {
 	margin-right: auto;
 }
 .right {
 	margin-left: auto;
+}
+
+.styleOne,
+.styleTwo,
+.styleThree {
+	position: absolute;
+	display: block;
+	width: 100%;
+	max-width: 280px;
+	height: 60px;
+	border: 1px solid var(--primary-pink);
+	transform: skewY(-25deg);
+	transform-origin: left;
+}
+
+.styleOne {
+	top: 0px;
+}
+
+.styleTwo {
+	top: 80px;
+}
+.styleThree {
+	top: 80px;
+	transform: skewY(25deg);
+	background-color: var(--primary-pink);
+}
+
+.section-number {
+	position: absolute;
+	bottom: 15px;
+	right: 0px;
+	color: var(--primary-pink);
+	font-size: 24px;
 }
