--- a/style.css
+++ b/style.css
@@ -7,14 +7,45 @@
 }
 
 :root {
-	--text-black: rgb(23, 23, 23);
-	--primary-color: #faf4e5;
-	--primary-pink: #e5a1aa;
+	/* Light Theme Variables */
+	--color-text-light: #333332;
+	--color-background-light: #faf4e5;
+	--color-pink-light: #e5a1aa;
+	--color-green-light: #7ad0ac;
+	--color-blue-light: #8395cd;
+
+	/* Dark Theme Variables */
+	--color-text-dark: #faf4e5;
+	--color-background-dark: #8395cd;
 }
+
 html,
 body {
 	font-family: "Montserrat", sans-serif;
 	color: var(--text-black);
+}
+h1,
+section,
+p,
+span,
+svg {
+	transition: background-color 0.5s, color 0.5s;
+}
+
+.light-theme {
+	--color-text: var(--color-text-light);
+	--color-background: var(--color-background-light);
+	--color-pink: var(--color-pink-light);
+	--color-green: var(--color-green-light);
+	--color-blue: var(--color-blue-light);
+}
+
+.dark-theme {
+	--color-text: var(--color-text-dark);
+	--color-background: var(--color-background-dark);
+	--color-pink: var(--color-text-dark);
+	--color-green: var(--color-text-dark);
+	--color-blue: var(--color-text-dark);
 }
 
 /* Webgl experience */
@@ -22,11 +53,14 @@ body {
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
+	display: relative;
 }
 
 .experience-canvas {
 	width: 100%;
 	height: 100%;
+	display: absolute;
+	z-index: 999999999999;
 }
 
 /* Page styling */
@@ -66,7 +100,7 @@ body {
 
 	justify-content: center;
 	align-items: center;
-	background-color: var(--primary-pink);
+	background-color: var(--color-pink);
 	border-radius: 999px;
 	margin: 0px 16px;
 	border: none;
@@ -79,7 +113,7 @@ body {
 	border-radius: 50%;
 	width: 20px;
 	height: 20px;
-	background-color: var(--primary-color);
+	background-color: var(--color-background);
 	transition: all 0.2s ease-in-out;
 }
 
@@ -113,20 +147,24 @@ body {
 }
 .hero-main-title {
 	font-size: 44px;
+	color: var(--color-text);
 }
 .hero-main-description {
 	font-size: 16px;
+	color: var(--color-text);
 }
 
 .hero-second {
 	position: absolute;
 	top: calc(50% - 150px);
 	right: 0;
+	color: var(--color-text);
 }
 
 .hero-second-subheading {
 	font-size: 24px;
 	text-transform: uppercase;
+	color: var(--color-text);
 }
 
 .section-margin {
@@ -138,13 +176,13 @@ body {
 	width: 50%;
 	padding: 1000px 4%;
 	margin: 0;
-	background-color: var(--primary-color);
+	background-color: var(--color-background);
 }
 
 .section-intro-wrapper {
 	position: relative;
 	padding: 20% 5%;
-	border-bottom: 2px solid var(--primary-pink);
+	border-bottom: 2px solid var(--color-pink);
 	padding-bottom: 400px;
 }
 
@@ -158,17 +196,19 @@ body {
 	font-weight: 700;
 	line-height: 1.8;
 	margin-top: 64px;
+	color: var(--color-text);
 }
 
 .section-text {
 	line-height: 2;
 	margin-top: 18px;
 	font-size: 16px;
+	color: var(--color-text);
 }
 
 .section-title {
 	position: relative;
-	color: var(--primary-pink);
+	color: var(--color-pink);
 }
 .section-title-text {
 	display: block;
@@ -178,6 +218,7 @@ body {
 	transform: skewY(25deg);
 	z-index: 5;
 	text-transform: uppercase;
+	color: var(--color-pink);
 }
 .left {
 	margin-right: auto;
@@ -194,7 +235,7 @@ body {
 	width: 100%;
 	max-width: 280px;
 	height: 60px;
-	border: 1px solid var(--primary-pink);
+	border: 1px solid var(--color-pink);
 	transform: skewY(-25deg);
 	transform-origin: left;
 }
@@ -209,13 +250,63 @@ body {
 .styleThree {
 	top: 80px;
 	transform: skewY(25deg);
-	background-color: var(--primary-pink);
+	background-color: var(--color-pink);
 }
 
 .section-number {
 	position: absolute;
 	bottom: 15px;
 	right: 0px;
-	color: var(--primary-pink);
+	color: var(--color-pink);
 	font-size: 24px;
+}
+
+.blue-text {
+	color: var(--color-blue);
+}
+
+.blue-background {
+	background-color: var(--color-blue);
+}
+.blue-border {
+	border-color: var(--color-blue);
+}
+
+.green-text {
+	color: var(--color-green);
+}
+
+.green-background {
+	background-color: var(--color-green);
+}
+.green-border {
+	border-color: var(--color-green);
+}
+
+@media (max-width: 968px) {
+	.section {
+		width: 100%;
+	}
+	.progress-bar-wrapper-left {
+		right: 0;
+		left: auto;
+	}
+	.hero-main {
+		bottom: 120px;
+	}
+	.hero-second {
+		top: 160px;
+	}
+	.hero-wrapper {
+		width: calc(100% - 60px);
+	}
+	.hero-main-title {
+		font-size: 32px;
+	}
+	.hero-main-description {
+		font-size: 18px;
+	}
+	.hero-second-subheading {
+		font-size: 18px;
+	}
 }
