asscroll added to page and button added for turning desktop on

--- a/style.css
+++ b/style.css
@@ -325,6 +325,11 @@ svg {
 	border-color: var(--color-green);
 }
 
+.desktop {
+	cursor: pointer;
+	position: absolute;
+}
+
 @media (max-width: 968px) {
 	.section {
 		width: 100%;
