body overflow hidden

--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body {
 	font-family: "Montserrat", sans-serif;
 	color: var(--text-black);
 }
+
+body {
+	overflow: hidden;
+}
 h1,
 section,
 p,
