--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ body {
 	color: var(--text-black);
 }
 
-body {
+/* body {
 	overflow: hidden;
-}
+} */
 h1,
 section,
 p,
@@ -71,8 +71,8 @@ svg {
 
 .page {
 	z-index: 999;
-	width: 100%;
-	height: 100%;
+	width: 100;
+	height: 100vh;
 	overflow: hidden;
 }
 
