--- a/style.css
+++ b/style.css
@@ -67,6 +67,59 @@ svg {
 	z-index: 999999999999;
 }
 
+.preloader {
+	background-color: var(--color-background-light);
+	width: 100%;
+	height: 100vh;
+	opacity: 1;
+	position: fixed;
+	z-index: 99999999999;
+}
+
+.preloader-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+.loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.circle {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	margin: 6px;
+	background-color: var(--color-pink-light);
+	animation: load 1s ease-in-out infinite;
+}
+.circle:nth-child(2) {
+	animation-delay: 0.1s;
+}
+.circle:nth-child(3) {
+	animation-delay: 0.2s;
+}
+.hidden {
+	display: none;
+}
+
+@keyframes load {
+	0% {
+		transform: translateY(0);
+	}
+	30% {
+		transform: translateY(-12px);
+	}
+	60% {
+		transform: translateY(0);
+	}
+}
+
 /* Page styling */
 
 .page {
@@ -76,8 +129,47 @@ svg {
 	overflow: hidden;
 }
 
+.page-wrapper {
+	position: relative;
+}
+
+.animateText {
+	display: inline-block;
+
+	transform: translateY(100%);
+}
+
+.intro-text {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-weight: 500;
+	transform: translate(-50%, -50%);
+}
+
+.svg-wrapper {
+	position: absolute;
+	top: 90%;
+	left: 50%;
+	opacity: 0;
+	transform: translate(-50%, -50%);
+	animation: bounce 0.5s ease-in alternate infinite;
+}
+
+@keyframes bounce {
+	0% {
+		transform: translateY(0);
+	}
+	100% {
+		transform: translateY(9px);
+	}
+}
 /* Toggle */
 .toggle-bar {
+	opacity: 0;
 	position: fixed;
 	display: flex;
 	flex-direction: row;
@@ -127,9 +219,6 @@ svg {
 
 .slide {
 	left: 28px;
-}
-.page-wrapper {
-	position: relative;
 }
 
 .hero {
