--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ svg {
 	justify-content: center;
 	align-items: center;
 	position: absolute;
+	color: var(--color-text);
 	top: 50%;
 	left: 50%;
 	font-weight: 500;
@@ -154,6 +155,7 @@ svg {
 	position: absolute;
 	top: 90%;
 	left: 50%;
+	color: var(--color-text);
 	opacity: 0;
 	transform: translate(-50%, -50%);
 	animation: bounce 0.5s ease-in alternate infinite;
@@ -301,6 +303,10 @@ svg {
 	line-height: 1.8;
 	margin-top: 64px;
 	color: var(--color-text);
+}
+
+.project {
+	cursor: pointer;
 }
 
 .section-text {
